setup/config/ingress-template.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-rules
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   tls:
#     - hosts:
# ##      - '*.DOMAINNAME'  
#       - DOMAINNAME
#       secretName: tls-secret
#   rules:
#     - host: DOMAINNAME
#       http:
#         paths:
#           - path: /
#             backend:
#               serviceName: nginx-ingress-dapr
#               servicePort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rules
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
##      - '*.dapr.demo.com'  
      - DOMAINNAME
      secretName: tls-secret
  rules:
    - host: DOMAINNAME
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-ingress-dapr
                port: 
                  number: 80
